finishing contact section

--- a/index.html
+++ b/index.html
@@ -195,15 +195,17 @@
     <!--------------------------END TEAM DETAIL -------------------------->
     <div class='contact-wrapper'>
             <div class="heading">
-                <h1>Hubungi kami</h1>
-                </div>
+                <h1>Contact Us</h1>
+            </div>
 
-        <p>Email(Wajib diisi)</p>
-        <input>
-        <p>Pesan(Wajib diisi)</p>
-        <textarea></textarea>
-        <p>* Bidang wajib diisi</p>
-        <input class='btn-submit' type='submit' value='Kirim'>
+            <div>
+                <p>Email(Wajib diisi)</p>
+                <input>
+                <p>Pesan(Wajib diisi)</p>
+                <textarea></textarea>
+                <p>* Bidang wajib diisi</p>
+                <input class='btn-submit' type='submit' value='Kirim'>
+            </div>
       </div>
 
 </body>
