--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
 
 <body>
     <header>
-        <!-- <div class="container">
-            <div class="header-left">
-                <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
-            </div> -->
-            <!-- Tambahkan ikon menu disini -->
-            <!-- <span class="fa fa-bars menu-icon"></span>
-            <div class="header-right">
-                <a href="#">Pelajaran</a>
-                <a href="#">Daftar</a>
-                <a href="#" class="login">Log in</a>
+        <div class="main">
+            <div class="container">
+                <h1>WE ARE READY TO EXPLORE THIS UNIVERSE</h1>
+                <h2>J13 Team</h2>
+                <h3><a href="#" class="btn j13-a">Coralz</a> • 
+                    <a href="#" class="btn j13-b">Cuicid</a> • 
+                    <a href="#" class="btn j13-c">UjangA</a> • 
+                    <a href="#" class="btn j13-d">VS</a> • 
+                    <a href="#" class="btn j13-e">Weebo</a></h3>
+                <a href="#" class="btn go">
+                    <span>Our Pilot!</span>
+                </a>
             </div>
-        </div> -->
+        </div>
     </header>
    
     
