tambah kursor & sedikit ubah

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                     <a href="#" class="btn j13-d">VS</a> • 
                     <a href="#" class="btn j13-e">Weebo</a></h3>
                 <a href="#" class="btn go">
-                    <span>Our Pilot!</span>
+                    <!-- <span> -->
+                        Our Pilot!
+                    <!-- </span> -->
                 </a>
             </div>
         </div>
@@ -201,11 +203,11 @@
             </div>
 
             <div>
-                <p>Email(Wajib diisi)</p>
+                <p>Email *</p>
                 <input>
-                <p>Pesan(Wajib diisi)</p>
+                <p>Isi Pesan *</p>
                 <textarea></textarea>
-                <p>* Bidang wajib diisi</p>
+                <p>* tidak boleh kosong</p>
                 <input class='btn-submit' type='submit' value='Kirim'>
             </div>
       </div>
