little makeup(card,link->directory)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- <div class="teamss"> -->
             <div class="teams">
                 <div class="teams-icon">
-                    <img src="https://i.imgur.com/6AizWuB.png">
+                    <img src="./img/ava2.png">
                 </div>
                 <h4 class="teams-name">Yudie Ariwibowo</h4>
                 <p>as</p>
@@ -48,7 +48,7 @@
             </div>
             <div class="teams">
                 <div class="teams-icon">
-                    <img src="https://i.imgur.com/wzBImSC.png">
+                    <img src="./img/ava1.png">
                 </div>
                 <h4 class="teams-name">Yuniar Agus</h4>
                 <p>as</p>
@@ -56,7 +56,7 @@
             </div>
             <div class="teams">
                 <div class="teams-icon">
-                    <img src="https://i.imgur.com/CirbWBL.png">
+                    <img src="./img/ava5.png">
                 </div>
                 <h4 class="teams-name">Very Bratajaya</h4>
                 <p>as</p>
@@ -64,7 +64,7 @@
             </div>
             <div class="teams">
                 <div class="teams-icon">
-                    <img src="https://i.imgur.com/2hHHQij.png">
+                    <img src="./img/ava4.png">
                 </div>
                 <h4 class="teams-name">Ujang Misbahul Alam</h4>
                 <p>as</p>
@@ -72,7 +72,7 @@
             </div>
             <div class="teams">
                 <div class="teams-icon">
-                    <img src="https://i.imgur.com/3DTijJB.png">
+                    <img src="./img/ava3.png">
                 </div>
                 <h4 class="teams-name">Vincent Adyanto H</h4>
                 <p>as</p>
@@ -92,7 +92,7 @@
             </div>
             <div class="detail">
                 <div class="detail-box">
-                    <img class="left" src="https://i.imgur.com/6AizWuB.png">
+                    <img class="left" src="./img/ava2.png">
                         <div class="detail-left">
                         <h2>Yudie Ariwibowo</h2>
                         <div class="detail-content">
@@ -112,7 +112,7 @@
             </div>
             <div class="detail">
                 <div class="detail-box">
-                    <img class="right" src="https://i.imgur.com/wzBImSC.png">
+                    <img class="right" src="./img/ava1.png">
                     
                     <div class="detail-right">
                         <h2>Yuniar Agus</h2>
@@ -134,7 +134,7 @@
             </div>
             <div class="detail">
                 <div class="detail-box">
-                    <img class="left" src="https://i.imgur.com/6AizWuB.png">
+                    <img class="left" src="./img/ava5.png">
                         <div class="detail-left">
                         <h2>Very Bratajaya</h2>
                         <div class="detail-content">
@@ -154,7 +154,7 @@
             </div>
             <div class="detail">
                 <div class="detail-box">
-                    <img class="right" src="https://i.imgur.com/wzBImSC.png">
+                    <img class="right" src="./img/ava4.png">
                     
                     <div class="detail-right">
                         <h2>Ujang Misbahul Alam</h2>
@@ -176,7 +176,7 @@
             </div>
             <div class="detail">
                 <div class="detail-box">
-                    <img class="left" src="https://i.imgur.com/6AizWuB.png">
+                    <img class="left" src="./img/ava3.png">
                         <div class="detail-left">
                         <h2>Vincent Adyanto H</h2>
                         <div class="detail-content">
@@ -199,7 +199,7 @@
     <!--------------------------END TEAM DETAIL -------------------------->
     <div class='contact-wrapper'>
             <div class="heading">
-                <h1>Contact Us</h1>
+                <h1>Contact Us<span>_</span></h1>
             </div>
 
             <div>
