--- a/index.html
+++ b/index.html
@@ -181,15 +181,15 @@
                         <h2>Vincent Adyanto H</h2>
                         <div class="detail-content">
                             <p>background</p>
-                            <h4>...............</h4>
+                            <h4>Event Manager & Digital Game Voucher Seller</h4>
                         </div>
                         <div class="detail-content">
                             <p>motivasi</p>
-                            <h4>...............</h4>
+                            <h4>Ingin mengasah skill dalam bahasa pemrograman HTML, CSS maupun JS</h4>
                         </div>
                         <div class="detail-content">
                             <p>motto</p>
-                            <h4><i>...............</i></h4>
+                            <h4><i>"Don't judge someone by it's look if you didn't even know him/her background"</i></h4>
                         </div>
                     </div>
                 </div>
