ubah posisi nick main

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
             <div class="container">
                 <h1>WE ARE READY TO EXPLORE THIS UNIVERSE</h1>
                 <h2>J13 Team</h2>
-                <h3><a href="#" class="btn j13-a">Coralz</a> • 
+                <h3>
+                    <a href="#" class="btn j13-e">Weebo</a>
                     <a href="#" class="btn j13-b">Cuicid</a> • 
-                    <a href="#" class="btn j13-c">UjangA</a> • 
                     <a href="#" class="btn j13-d">VS</a> • 
-                    <a href="#" class="btn j13-e">Weebo</a></h3>
+                    <a href="#" class="btn j13-c">UjangA</a> • 
+                    <a href="#" class="btn j13-a">Coralz</a> • 
+                </h3>
                 <a href="#" class="btn go">
                     <!-- <span> -->
                         Our Pilot!
