--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
                         <h2>Yudie Ariwibowo</h2>
                         <div class="detail-content">
                             <p>background</p>
-                            <h4>...............</h4>
+                            <h4>Networking interested & Education</h4>
                         </div>
                         <div class="detail-content">
                             <p>motivasi</p>
-                            <h4>...............</h4>
+                            <h4>Ingin menambah ilmu seputar dunia IT khususnya web programming</h4>
                         </div>
                         <div class="detail-content">
                             <p>motto</p>
-                            <h4><i>...............</i></h4>
+                            <h4><i>"Tidak penting seberapa lambat anda melaju, selagi anda tidak berhenti"</i></h4>
                         </div>
                     </div>
                 </div>
