add ujang & favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="icon" href="./img/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>J13 Progate Team</title>
     <link rel="stylesheet" href="stylesheet.css">
@@ -124,7 +125,7 @@
                         </div>
                         <div class="detail-content">
                         <p>motivasi</p>
-                        <h4>Menambah ilmu dalam dunia pemrograman dalam industri 4.0</h4>
+                        <h4>Menambah pengetahuan di dunia pemrograman dalam menyambut industri 4.0</h4>
                         </div>
                         <div class="detail-content">
                         <p>motto</p>
@@ -162,15 +163,15 @@
                         <h2>Ujang Misbahul Alam</h2>
                         <div class="detail-content">
                             <p>background</p>
-                            <h4>...............</h4>
+                            <h4>Guru Madrasah</h4>
                         </div>
                         <div class="detail-content">
                         <p>motivasi</p>
-                        <h4>...............</h4>
+                        <h4> Ingin memperdalam ilmu Pemrograman agar bisa menciptakan sesuatu yang baru untuk dunia pendidikan di era Industri 4.0</h4>
                         </div>
                         <div class="detail-content">
                         <p>motto</p>
-                        <h4><i>...............</i></h4>
+                        <h4><i>"Bangun kesan yang mendalam, selesaikan tugas tanpa beban, amalkan ilmu yang kita dapatkan"</i></h4>
                         </div>
                     </div>
 
