--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <h1>WE ARE READY TO EXPLORE THIS UNIVERSE</h1>
                 <h2>J13 Team</h2>
                 <h3>
-                    <a href="#" class="btn j13-e">Weebo</a> •
-                    <a href="#" class="btn j13-b">Cuicid</a> • 
-                    <a href="#" class="btn j13-d">VS</a> • 
-                    <a href="#" class="btn j13-c">UjangA</a> • 
-                    <a href="#" class="btn j13-a">Coralz</a>
+                    <a href="#section1" class="btn j13-e">Weebo</a> •
+                    <a href="#section2" class="btn j13-b">Cuicid</a> • 
+                    <a href="#section3" class="btn j13-d">VS</a> • 
+                    <a href="#section4" class="btn j13-c">UjangA</a> • 
+                    <a href="#section5" class="btn j13-a">Coralz</a>
                 </h3>
                 <a href="#" class="btn go">
                     <!-- <span> -->
@@ -41,7 +41,7 @@
                 <h1>Meet our pilot<span>_</span></h1>
             </div>
             <!-- <div class="teamss"> -->
-            <div class="teams">
+            <div class="teams" id="section1">
                 <div class="teams-icon">
                     <img src="./img/ava2.png">
                 </div>
@@ -49,7 +49,7 @@
                 <p>as</p>
                 <h3 class="teams-name">Weebo</h3>
             </div>
-            <div class="teams">
+            <div class="teams" id="section2">
                 <div class="teams-icon">
                     <img src="./img/ava1.png">
                 </div>
@@ -57,7 +57,7 @@
                 <p>as</p>
                 <h3 class="teams-name">Cuicid</h3>
             </div>
-            <div class="teams">
+            <div class="teams" id="section3">
                 <div class="teams-icon">
                     <img src="./img/ava5.png">
                 </div>
@@ -65,7 +65,7 @@
                 <p>as</p>
                 <h3 class="teams-name">VS</h3>
             </div>
-            <div class="teams">
+            <div class="teams" id="section4">
                 <div class="teams-icon">
                     <img src="./img/ava4.png">
                 </div>
@@ -73,7 +73,7 @@
                 <p>as</p>
                 <h3 class="teams-name">UjangA</h3>
             </div>
-            <div class="teams">
+            <div class="teams" id="section5">
                 <div class="teams-icon">
                     <img src="./img/ava3.png">
                 </div>
