--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#section4" class="btn j13-c">UjangA</a> • 
                     <a href="#section5" class="btn j13-a">Coralz</a>
                 </h3>
-                <a href="#" class="btn go">
+                <a href="#ourpilot" class="btn go">
                     <!-- <span> -->
                         Our Pilot!
                     <!-- </span> -->
@@ -37,11 +37,11 @@
     <!-------------------------- TEAM SECTION -------------------------->
     <div class="teams-wrapper">
         <div class="container">
-            <div class="heading">
+            <div class="heading" id="ourpilot">
                 <h1>Meet our pilot<span>_</span></h1>
             </div>
             <!-- <div class="teamss"> -->
-            <div class="teams" id="section1">
+            <div class="teams">
                 <div class="teams-icon">
                     <img src="./img/ava2.png">
                 </div>
@@ -49,7 +49,7 @@
                 <p>as</p>
                 <h3 class="teams-name">Weebo</h3>
             </div>
-            <div class="teams" id="section2">
+            <div class="teams">
                 <div class="teams-icon">
                     <img src="./img/ava1.png">
                 </div>
@@ -57,7 +57,7 @@
                 <p>as</p>
                 <h3 class="teams-name">Cuicid</h3>
             </div>
-            <div class="teams" id="section3">
+            <div class="teams">
                 <div class="teams-icon">
                     <img src="./img/ava5.png">
                 </div>
@@ -65,7 +65,7 @@
                 <p>as</p>
                 <h3 class="teams-name">VS</h3>
             </div>
-            <div class="teams" id="section4">
+            <div class="teams">
                 <div class="teams-icon">
                     <img src="./img/ava4.png">
                 </div>
@@ -73,7 +73,7 @@
                 <p>as</p>
                 <h3 class="teams-name">UjangA</h3>
             </div>
-            <div class="teams" id="section5">
+            <div class="teams">
                 <div class="teams-icon">
                     <img src="./img/ava3.png">
                 </div>
@@ -93,7 +93,7 @@
             <div class="heading">
                 <h1>J13 Biography<span>_</span></h1>
             </div>
-            <div class="detail">
+            <div class="detail" id="section1">
                 <div class="detail-box">
                     <img class="left" src="./img/ava2.png">
                         <div class="detail-left">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <div class="detail">
+            <div class="detail" id="section2">
                 <div class="detail-box">
                     <img class="right" src="./img/ava1.png">
                     
@@ -135,7 +135,7 @@
 
                 </div>
             </div>
-            <div class="detail">
+            <div class="detail" id="section3">
                 <div class="detail-box">
                     <img class="left" src="./img/ava5.png">
                         <div class="detail-left">
@@ -155,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <div class="detail">
+            <div class="detail" id="section4">
                 <div class="detail-box">
                     <img class="right" src="./img/ava4.png">
                     
@@ -177,7 +177,7 @@
 
                 </div>
             </div>
-            <div class="detail">
+            <div class="detail" id="section5">
                 <div class="detail-box">
                     <img class="left" src="./img/ava3.png">
                         <div class="detail-left">
