--- a/index.html
+++ b/index.html
@@ -13,27 +13,46 @@
 </head>
 
 <body>
-    <header>
-        <div class="main">
-            <div class="container">
-                <h1>WE ARE READY TO EXPLORE THIS UNIVERSE</h1>
-                <h2>J13 Team</h2>
-                <h3>
-                    <a href="#section1" class="btn j13-e">Weebo</a> •
-                    <a href="#section2" class="btn j13-b">Cuicid</a> • 
-                    <a href="#section3" class="btn j13-d">VS</a> • 
-                    <a href="#section4" class="btn j13-c">UjangA</a> • 
-                    <a href="#section5" class="btn j13-a">Coralz</a>
-                </h3>
-                <a href="#ourpilot" class="btn go">
-                    <!-- <span> -->
-                        Our Pilot!
-                    <!-- </span> -->
-                </a>
-            </div>
+    <header>      
+        <div class="container">
+          <div class="header-left">
+            <a href="#" target="_top"><img class="logo" src="./img/j13-rev.png"></a>
+          </div>
+          <div class="header-right">        
+             <a class="login" href="#">Log in</a>
+          </div>       
+          <div class="header-right">
+             <a class="login" href="#contact">Contact</a>
+          </div>
+          <div class="header-right">
+             <a class="login" href="#biography">Biography</a>
+          </div>
+          <div class="header-right">
+             <a class="login" href="#ourpilot">Team</a>
+          </div>
         </div>
-    </header>
-   
+       </header>
+    <!-------------------------- MAIN SECTION -------------------------->
+    <div class="main">
+        <div class="container">
+            <h1>WE ARE READY TO EXPLORE THIS UNIVERSE</h1>
+            <h2>J13 Team</h2>
+            <h3>
+                <a href="#section1" class="btn j13-e">Weebo</a> •
+                <a href="#section2" class="btn j13-b">Cuicid</a> • 
+                <a href="#section3" class="btn j13-d">VS</a> • 
+                <a href="#section4" class="btn j13-c">UjangA</a> • 
+                <a href="#section5" class="btn j13-a">Coralz</a>
+            </h3>
+            <a href="#ourpilot" class="btn go">
+                <!-- <span> -->
+                    Our Pilot!
+                <!-- </span> -->
+            </a>
+        </div>
+    </div>
+    <!-------------------------- END MAIN SECTION -------------------------->
+    
     
     <!-------------------------- TEAM SECTION -------------------------->
     <div class="teams-wrapper">
@@ -92,7 +111,7 @@
     <!-------------------------- TEAM DETAIL -------------------------->
     <div class="detail-wrapper">
         <div class="container">
-            <div class="heading">
+            <div class="heading" id="biography">
                 <h1><span>_</span>J13 Biography<span>_</span></h1>
             </div>
             <div class="detail" id="section1">
@@ -330,7 +349,7 @@
         </div>
     </div>
     <!--------------------------END TEAM DETAIL -------------------------->
-    <div class='contact-wrapper'>
+    <div class='contact-wrapper' id="contact">
             <div class="heading">
                 <h1><span>_</span>Contact Us<span>_</span></h1>
             </div>
