--- a/index.html
+++ b/index.html
@@ -173,15 +173,15 @@
                     </h2>
                         <div class="detail-content">
                             <p>background</p>
-                            <h4> ........ </h4>
+                            <h4>Installer perangkat BTS Provider</h4>
                         </div>
                         <div class="detail-content">
                             <p>motivasi</p>
-                            <h4> .......... </h4>
+                            <h4>Mengenal dan mempelajari ilmu coding dan sebangsa nya.</h4>
                         </div>
                         <div class="detail-content">
                             <p>motto</p>
-                            <h4><i> ........ </i></h4>
+                            <h4><i>"Don't try this at home"</i></h4>
                         </div>
                 </div>
                 <div class="detail-img">
@@ -365,5 +365,10 @@
       </div>
 
 </body>
-
+<footer>
+    <div class="container">
+        <img src="https://user-images.githubusercontent.com/64297670/80271786-e5dc1b80-86ed-11ea-89b7-de3be8d1e64f.png">
+        <p>Thanks for visit our web</p>
+    </div>
+</footer>
 </html>
