--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           <div class="header-left">
             <a href="#" target="_top"><img class="logo" src="./img/j13-rev.png"></a>
           </div>
+            <a href="#" class="menu-icon">
+                <span class="fa fa-bars"></span>
+            </a>
           <div class="header-right">        
              <a class="login" href="#">Log in</a>
           </div>       
